--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "eventsource-parser": "^1.0.0",
+    "immer": "^10.0.2",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
