--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
-    "react-virtualized": "^9.22.5",
+    "react-virtualized-auto-sizer": "^1.0.17",
+    "react-window": "^1.8.9",
     "rehype-katex": "^6.0.3",
     "rehype-raw": "^6.1.1",
     "remark-breaks": "^3.0.3",
@@ -37,5 +38,8 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "@types/react-window": "^1.8.5"
   }
 }
