--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@tailwindcss/forms": "^0.5.3",
     "@types/react-window": "^1.8.5"
   }
