--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "@types/react-syntax-highlighter": "^15.5.6",
+    "animate.css": "^4.1.1",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
     "eslint": "8.40.0",
@@ -20,6 +21,7 @@
     "eventsource-parser": "^1.0.0",
     "immer": "^10.0.2",
     "next": "13.4.1",
+    "openai": "^3.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
