--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/openai"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/openai", "src/components/VirtualizedList/ChatRow.tsx.back", "src/components/VirtualizedList/index.tsx.back", "src/components/VirtualizedList/ChatList.tsx.back"],
   "exclude": ["node_modules"]
 }
