--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "remark-math": "^5.1.1",
     "remark-slug": "^7.0.1",
     "remark-toc": "^8.0.1",
+    "sharp": "^0.32.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
