--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-syntax-highlighter": "^15.5.6",
     "animate.css": "^4.1.1",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/react-window": "^1.8.5"
   }
 }
